remove \E, \Var etc

--- a/base/2016_final_spring_demo/10.Rmd
+++ b/base/2016_final_spring_demo/10.Rmd
@@ -6,7 +6,7 @@ Question
 Answerlist
 ----------
 *  $Y_t = - Y_{t-1} + u_t$
-*  $Y_t$ независимо и одинаково распределены $\cN(7; 16)$
+*  $Y_t$ независимо и одинаково распределены $\mathcal{N}(7; 16)$
 *  $Y_t = u_t + 2u_{t-1}$
 *  $Y_t = 7 + u_t + 0.2 u_{t-1} - 1.2 u_t{-2}$
 *  $Y_t = 5 + 0.1 Y_{t-1} + u_{t} + 0.2 u_{t-1}$
