--- a/base/2016_kr_01/7.Rmd
+++ b/base/2016_kr_01/7.Rmd
@@ -6,12 +6,12 @@ Question
 
 Answerlist
 ----------
-*  $\E(u_i)=0$
+*  $\mathbb{E}(u_i)=0$
 *  гомоскедастичность случайных ошибок
 *  гетероскедастичность случайных ошибок
 *  нормальность случайных ошибок
 *  некоррелированность случайных ошибок
-*  $\E(u_i)\neq 0$
+*  $\mathbb{E}(u_i)\neq 0$
 
 Solution
 ========
