--- a/base/2016_kr_02_midterm/9.Rmd
+++ b/base/2016_kr_02_midterm/9.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-Исследователь выполнил второй шаг в PE-тесте МакКиннона. В регрессии $\ln Y_i$ на исходные регрессоры и $Z_i = \hat Y_i - \exp(\widehat{\ln Y_i})$ коэффициент при $Z_i$ оказался значимым. А в регрессии $Y_i$ на исходные регрессоры и $W_i = \ln \hat Y_i - \widehat{\ln Y_i}$ коэффициент при $W_i$ оказался незначимым. Из результатов следует сделать вывод, что
+Исследователь выполнил второй шаг в PE-тесте МакКиннона. В регрессии $\ln Y_i$ на исходные регрессоры и $Z_i = \hat Y_i - \mathbb{E}xp(\widehat{\ln Y_i})$ коэффициент при $Z_i$ оказался значимым. А в регрессии $Y_i$ на исходные регрессоры и $W_i = \ln \hat Y_i - \widehat{\ln Y_i}$ коэффициент при $W_i$ оказался незначимым. Из результатов следует сделать вывод, что
 
 
 Answerlist
