--- a/base/2016_kr_02_midterm_demo/6.Rmd
+++ b/base/2016_kr_02_midterm_demo/6.Rmd
@@ -1,8 +1,8 @@
 Question
 ========
-Если оценивается модель  $\hat Y_i = \hb_1 + \hb_2 X_i$,
+Если оценивается модель  $\hat Y_i = \hat \beta_1 + \hat \beta_2 X_i$,
 а истинной является модель $Y_i = \beta_1 + \beta_2 X_i + \beta_3 Z_i + u_i$,
-то МНК-оценка $\hb_2$ оказывается
+то МНК-оценка $\hat \beta_2$ оказывается
 
 
 Answerlist
