--- a/base/2016_kr_03/10.Rmd
+++ b/base/2016_kr_03/10.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-Василий хочет оценить константу $\mu$ в  модели $Y_i = \mu + u_i$, где $\E(u_i)=0$, $\E(u_i u_j)=0$ при $i\neq j$, $\Var(u_i)=\sigma^2 X_i$ и $X_i>0$.
+Василий хочет оценить константу $\mu$ в  модели $Y_i = \mu + u_i$, где $\mathbb{E}(u_i)=0$, $\mathbb{E}(u_i u_j)=0$ при $i\neq j$, $\mathrm{Var}(u_i)=\sigma^2 X_i$ и $X_i>0$.
 
 В классе линейных несмещенных оценок наиболее эффективной является:
 
