--- a/base/2016_kr_03/4.Rmd
+++ b/base/2016_kr_03/4.Rmd
@@ -1,14 +1,14 @@
 Question
 ========
-Метод максимального правдоподобия для оценки коэффициентов регрессии $Y = X\beta  + \varepsilon$ НЕ МОЖЕТ быть применён, если
+Метод максимального правдоподобия для оценки коэффициентов регрессии $Y = X\beta  + \mathrm{Var}epsilon$ НЕ МОЖЕТ быть применён, если
 
 Answerlist
 ----------
-*  $\e \sim \cN(0; \Omega)$ и структура $\Omega$ неизвестна
-*  $\e \sim \cN(0; \Omega)$ и структура $\Omega$ известна, но зависит от набора неизвестных параметров
-*  $\e \sim \cN(0; \Omega)$ и $\Omega = 2017 \cdot I$
-*  $\e \sim \cN(0; \Omega)$ и  $\Omega =  b \cdot I$, где $b$ — неизвестный параметр
-*  закон  распределения вектора $\e$ известен, но не является нормальным
+*  $\mathbb{E} \sim \mathcal{N}(0; \Omega)$ и структура $\Omega$ неизвестна
+*  $\mathbb{E} \sim \mathcal{N}(0; \Omega)$ и структура $\Omega$ известна, но зависит от набора неизвестных параметров
+*  $\mathbb{E} \sim \mathcal{N}(0; \Omega)$ и $\Omega = 2017 \cdot I$
+*  $\mathbb{E} \sim \mathcal{N}(0; \Omega)$ и  $\Omega =  b \cdot I$, где $b$ — неизвестный параметр
+*  закон  распределения вектора $\mathbb{E}$ известен, но не является нормальным
 
 Solution
 ========
