--- a/base/2016_kr_04_final/10.Rmd
+++ b/base/2016_kr_04_final/10.Rmd
@@ -2,12 +2,12 @@ Question
 ========
 Оценка регрессионной зависимости с помощью МНК по 1234 наблюдениям имеет вид $\hat Y_i = 1 - 3X_i + 4Z_i$. Оценка ковариационной матрицы имеет вид
 $$
-\Var(\hb)=
+\mathrm{Var}(\hat \beta)=
 \begin{pmatrix}
 1 & 0.1 & 0.2 \\
 0.1 & 4 & 1.5 \\
 0.2 & 1.5 & 18 \\
-\end{pmatrix}.
+\mathbb{E}nd{pmatrix}.
 $$
 
 Длина 95\%-го доверительного интервала для $\beta_2 + \beta_3$ примерно равна
