--- a/base/2016_kr_04_final/3.Rmd
+++ b/base/2016_kr_04_final/3.Rmd
@@ -1,16 +1,16 @@
 Question
 ========
-Обобщенный МНК служит для оценивания регрессионной модели $Y=X\beta + \e$ в случае нарушения следующего условия теоремы Гаусса-Маркова
+Обобщенный МНК служит для оценивания регрессионной модели $Y=X\beta + \mathbb{E}$ в случае нарушения следующего условия теоремы Гаусса-Маркова
 
 
 
 Answerlist
 ----------
-*  $\Var(\e_i)=\sigma^2_{\e}$
-*  $\E(\e_i)=0$
+*  $\mathrm{Var}(u_i)=\sigma^2_{\mathbb{E}}$
+*  $\mathbb{E}(u_i)=0$
 *  $\rank X = k$
-*  $\Cov(\e_i, X_i)=0$
-*  $\Cov(Y_i, \e_i)=0$
+*  $\mathrm{Cov}(u_i, X_i)=0$
+*  $\mathrm{Cov}(Y_i, u_i)=0$
 
 Solution
 ========
