--- a/base/2016_kr_04_final/5.Rmd
+++ b/base/2016_kr_04_final/5.Rmd
@@ -7,8 +7,8 @@ Answerlist
 ----------
 *  нет верного ответа
 *  $t_n$-распределение
-*  $\cN(0;1)$-распределение
-*  $\cN(\mu;\sigma^2)$-распределение
+*  $\mathcal{N}(0;1)$-распределение
+*  $\mathcal{N}(\mu;\sigma^2)$-распределение
 *  $F_{k,n}$-распределение
 *  $t_{n-k}$-распределение
 
