--- a/base/2017_kr_01/10.Rmd
+++ b/base/2017_kr_01/10.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-Для регрессии $Y_i = \beta_1 + \beta_2 X_i + \e_i$, оценённой по 30 наблюдениям с суммой квадратов остатков, равной 15, несмещенная оценка дисперсии случайной составляющей равна
+Для регрессии $Y_i = \beta_1 + \beta_2 X_i + u_i$, оценённой по 30 наблюдениям с суммой квадратов остатков, равной 15, несмещенная оценка дисперсии случайной составляющей равна
 
 
 Answerlist
