--- a/base/2017_kr_01/2.Rmd
+++ b/base/2017_kr_01/2.Rmd
@@ -1,15 +1,15 @@
 Question
 ========
-Оценка МНК коэффициента регрессии без свободного члена $Y_i = \beta X_i + \e_i, i = 1, \ldots, n$, где $x_i = X_i - \overline{X}, y_i = Y_i - \overline{Y}$, находится по формуле
+Оценка МНК коэффициента регрессии без свободного члена $Y_i = \beta X_i + u_i, i = 1, \ldots, n$, где $x_i = X_i - \overline{X}, y_i = Y_i - \overline{Y}$, находится по формуле
 
 
 Answerlist
 ----------
-*  $\hb = \frac{\sum_{i=1}^n X_i Y_i }{\sum_{i=1}^n X_i^2}$
-*  $\hb = \frac{\sum_{i=1}^n x_i y_i }{\sum_{i=1}^n x_i^2}$
-*  $\hb = \frac{\sum_{i=1}^n x_i y_i }{\sum_{i=1}^n y_i^2}$
-*  $\hb = \frac{\sum_{i=1}^n X_i Y_i }{\sum_{i=1}^n Y_i^2}$
-*  $\hb = \frac{\sum_{i=1}^n x_i y_i }{\sum_{i=1}^n X_i^2}$
+*  $\hat \beta = \frac{\sum_{i=1}^n X_i Y_i }{\sum_{i=1}^n X_i^2}$
+*  $\hat \beta = \frac{\sum_{i=1}^n x_i y_i }{\sum_{i=1}^n x_i^2}$
+*  $\hat \beta = \frac{\sum_{i=1}^n x_i y_i }{\sum_{i=1}^n y_i^2}$
+*  $\hat \beta = \frac{\sum_{i=1}^n X_i Y_i }{\sum_{i=1}^n Y_i^2}$
+*  $\hat \beta = \frac{\sum_{i=1}^n x_i y_i }{\sum_{i=1}^n X_i^2}$
 
 Solution
 ========
