--- a/base/2017_kr_01/4.Rmd
+++ b/base/2017_kr_01/4.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-Для оцениваемой по 30 наблюдениям регрессии $Y_i = \alpha + \beta X_i + \e_i, i = 1, \ldots, n$ известны суммы $\sum_{i=1}^{30} X_i = -15, \sum_{i=1}^{30} X_i^2 = 60, \sum_{i=1}^{30} X_i Y_i = 15, \sum_{i=1}^{30} Y_i = 75$. Система нормальных уравнений для оценок коэффициентов регрессии $\alpha, \beta$ методом наименьших квадратов равносильна системе
+Для оцениваемой по 30 наблюдениям регрессии $Y_i = \alpha + \beta X_i + u_i, i = 1, \ldots, n$ известны суммы $\sum_{i=1}^{30} X_i = -15, \sum_{i=1}^{30} X_i^2 = 60, \sum_{i=1}^{30} X_i Y_i = 15, \sum_{i=1}^{30} Y_i = 75$. Система нормальных уравнений для оценок коэффициентов регрессии $\alpha, \beta$ методом наименьших квадратов равносильна системе
 
 
 Answerlist
