--- a/base/2017_kr_02_midterm/5.Rmd
+++ b/base/2017_kr_02_midterm/5.Rmd
@@ -2,7 +2,7 @@ Question
 ========
 Оценена зависимость расходов потребителей на газ и электричество Y в США в 1977-1999 г. в постоянных ценах I квартала 1977 г. от времени ($t = 1$ для 1977, $t = 2$ для 1978 и т.д.) с учётом сезонных факторов ($D_i = 1$, если наблюдение относится к i-ому кварталу и 0 иначе, $i = 1, \ldots, 4$):
 
-$\hY = 8 + 0.1t - 3 D_2 - 2.6 D_3 - 2 D_4$
+$\hat y = 8 + 0.1t - 3 D_2 - 2.6 D_3 - 2 D_4$
 
 Если в качестве базовой категории будет принят не первый квартал, а третий, уравнение регрессии примет вид
 
@@ -10,11 +10,11 @@ $\hY = 8 + 0.1t - 3 D_2 - 2.6 D_3 - 2 D_4$
 
 Answerlist
 ----------
-*  $\hY = 5.4 + 0.1t + 2.6 D_1 - 0.4 D_2 + 0.6D_4$
-*  $\hY = 8 + 0.1t - 3 D_1 - 2.6 D_2 - 2 D_4$
-*  $\hY = 5.4 + 0.1t - 3 D_1 - 0.4 D_2 - D_4$
-*  $\hY = 5.4 + 0.1t - 3 D_1 - 2.6 D_2 - 2 D_4$
-*  $\hY = 8 + 0.1t + 3 D_1 + 2.6 D_2 + 2D_4$
+*  $\hat y = 5.4 + 0.1t + 2.6 D_1 - 0.4 D_2 + 0.6D_4$
+*  $\hat y = 8 + 0.1t - 3 D_1 - 2.6 D_2 - 2 D_4$
+*  $\hat y = 5.4 + 0.1t - 3 D_1 - 0.4 D_2 - D_4$
+*  $\hat y = 5.4 + 0.1t - 3 D_1 - 2.6 D_2 - 2 D_4$
+*  $\hat y = 8 + 0.1t + 3 D_1 + 2.6 D_2 + 2D_4$
 
 Solution
 ========
