--- a/base/2017_kr_02_midterm/8.Rmd
+++ b/base/2017_kr_02_midterm/8.Rmd
@@ -1,18 +1,18 @@
 Question
 ========
-По одним и тем же наблюдениям оценили две регрессии: $\hY = 1 + 3X_1$ и $\hY = 2 + 5X_2$.
+По одним и тем же наблюдениям оценили две регрессии: $\hat y = 1 + 3X_1$ и $\hat y = 2 + 5X_2$.
 
-Известно, что $\hCov(X_1, X_2) > 0$. Оценки МНК коэффициентов регрессии $Y = \beta_0 + \beta_1 X_1 + \beta_2 X_2 + \varepsilon$:
+Известно, что $\hCov(X_1, X_2) > 0$. Оценки МНК коэффициентов регрессии $Y = \beta_0 + \beta_1 X_1 + \beta_2 X_2 + \mathrm{Var}epsilon$:
 
 
 
 Answerlist
 ----------
 *  оценки коэффициентов невозможно найти по имеющимся данным
-*  $\hb_0$ найти невозможно, $\hb_1 = 3, \hb_2 = 5$
-*  $\hb_0 = 3, \hb_1 = 3, \hb_2 = 5$
-*  $\hb_0 = 1.5, \hb_1 = 3, \hb_2 = 5$
-*  $\hb_1, \hb_2$ найти невозможно, $\hb_0 = 3$
+*  $\hat \beta_0$ найти невозможно, $\hat \beta_1 = 3, \hat \beta_2 = 5$
+*  $\hat \beta_0 = 3, \hat \beta_1 = 3, \hat \beta_2 = 5$
+*  $\hat \beta_0 = 1.5, \hat \beta_1 = 3, \hat \beta_2 = 5$
+*  $\hat \beta_1, \hat \beta_2$ найти невозможно, $\hat \beta_0 = 3$
 
 Solution
 ========
