--- a/base/2017_kr_04_final/10.Rmd
+++ b/base/2017_kr_04_final/10.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-При оценивании регрессионной модели $Y_t = a_0 + \sum_{j=1}^3 a_j X_{jt} + \varepsilon_t$ по 20 наблюдениям получено значение статистики Дарбина-Уотсона $d = 0.8$. При уровне значимости 1\% это свидетельствует о
+При оценивании регрессионной модели $Y_t = a_0 + \sum_{j=1}^3 a_j X_{jt} + \mathrm{Var}epsilon_t$ по 20 наблюдениям получено значение статистики Дарбина-Уотсона $d = 0.8$. При уровне значимости 1\% это свидетельствует о
 
 
 
