--- a/base/2017_kr_04_final/3.Rmd
+++ b/base/2017_kr_04_final/3.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-Общеизвестно, что потребление мёда Винни-Пухом зависит, при этом положительно, от количества стихов, сочинённых им за день. К сожалению, Винни-Пух забывчив и всегда называет число сочинённых им стихов с ошибкой. Тогда оценка $\beta_1$ в регрессии $Honey_i = \beta_0 + \beta_1 Poems_i + \varepsilon_i $ окажется
+Общеизвестно, что потребление мёда Винни-Пухом зависит, при этом положительно, от количества стихов, сочинённых им за день. К сожалению, Винни-Пух забывчив и всегда называет число сочинённых им стихов с ошибкой. Тогда оценка $\beta_1$ в регрессии $Honey_i = \beta_0 + \beta_1 Poems_i + \mathrm{Var}epsilon_i $ окажется
 
 
 
