--- a/base/2018_19_kr1/question_02.Rmd
+++ b/base/2018_19_kr1/question_02.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-Крокодил Гена оценивает модель регрессии $Y_i = \beta_0 + \beta_1 X_i + \varepsilon_i$ с помощью МНК.
+Крокодил Гена оценивает модель регрессии $Y_i = \beta_0 + \beta_1 X_i + \mathrm{Var}epsilon_i$ с помощью МНК.
 Чебурашка получит такую же оценку коэффициента $\beta_1$, если будет минимизировать
 
 Answerlist
