--- a/base/2018_19_kr1/question_09.Rmd
+++ b/base/2018_19_kr1/question_09.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-Оценки МНК вектора коэффициентов регрессии $Y=X\beta + \varepsilon$
+Оценки МНК вектора коэффициентов регрессии $Y=X\beta + \mathrm{Var}epsilon$
 находятся по формуле
 
 Answerlist
