--- a/base/2016_kr_02_midterm/3.Rmd
+++ b/base/2016_kr_02_midterm/3.Rmd
@@ -4,17 +4,17 @@ Question
 а истинная зависимость описывается уравнением
 $Y_i = \alpha_1 + \alpha_2 X_i + \alpha_3 Z_i + u_i$.
 Исследователь оценивает с помощью МНК две регрессии:
-$\hat Y_i = \hb_1 + \hb_2 X_i$ и $\hat Y_i = \hat \gamma_1 + \hat \gamma_2 Z_i$.
+$\hat Y_i = \hat \beta_1 + \hat \beta_2 X_i$ и $\hat Y_i = \hat \gamma_1 + \hat \gamma_2 Z_i$.
 При этом
 
 
 Answerlist
 ----------
-*  $\hb_2$ — несмещённая оценка для $\alpha_2$; $\hat \gamma_2$ — несмещённая оценка для $\alpha_3$
-*  $\hb_2$ — смещённая оценка для $\alpha_2$; $\hat \gamma_2$ — смещённая оценка для $\alpha_3$
-*  $\hb_2$ — несмещённая оценка для $\alpha_2$; $\hat \gamma_2$ — смещённая оценка для $\alpha_3$
-*  $\hb_2$ — смещённая оценка для $\alpha_2$; $\hat \gamma_2$ — несмещённая оценка для $\alpha_3$
-*  $\hb_2$ — эффективная оценка для $\alpha_2$; $\hat \gamma_2$ — эффективная оценка для $\alpha_3$
+*  $\hat \beta_2$ — несмещённая оценка для $\alpha_2$; $\hat \gamma_2$ — несмещённая оценка для $\alpha_3$
+*  $\hat \beta_2$ — смещённая оценка для $\alpha_2$; $\hat \gamma_2$ — смещённая оценка для $\alpha_3$
+*  $\hat \beta_2$ — несмещённая оценка для $\alpha_2$; $\hat \gamma_2$ — смещённая оценка для $\alpha_3$
+*  $\hat \beta_2$ — смещённая оценка для $\alpha_2$; $\hat \gamma_2$ — несмещённая оценка для $\alpha_3$
+*  $\hat \beta_2$ — эффективная оценка для $\alpha_2$; $\hat \gamma_2$ — эффективная оценка для $\alpha_3$
 
 Solution
 ========
