--- a/base/2016_kr_02_midterm/8.Rmd
+++ b/base/2016_kr_02_midterm/8.Rmd
@@ -6,7 +6,7 @@ Question
 Answerlist
 ----------
 *  $\frac{ESS/(k-1)}{RSS/(n-k)}$
-*  $\frac{\hb - \beta}{se(\hb)}$
+*  $\frac{\hat \beta - \beta}{se(\hat \beta)}$
 *  $\frac{TSS/(n-1)}{RSS/(n-k)}$
 *  $\frac{TSS/(n-1)}{ESS/(k-1)}$
 *  $\frac{ESS}{TSS}$
