--- a/base/2016_kr_03/3.Rmd
+++ b/base/2016_kr_03/3.Rmd
@@ -2,9 +2,9 @@ Question
 ========
 Методом максимального правдоподобия Гоша оценил модель
 $$
-Y_i = \beta_1 + \beta_2 X_{i2} +  \ldots  + \beta _6 X_{i6} + \varepsilon_i,
+Y_i = \beta_1 + \beta_2 X_{i2} +  \ldots  + \beta _6 X_{i6} + \mathrm{Var}epsilon_i,
 $$
-где $\e \sim \cN (0,\sigma_{\e}^2I)$, по 12 наблюдениям. Оказалось, что $RSS = 24$.  Оценка дисперсии случайной составляющей равна
+где $\mathbb{E} \sim \mathcal{N} (0,\sigma_u^2I)$, по 12 наблюдениям. Оказалось, что $RSS = 24$.  Оценка дисперсии случайной составляющей равна
 
 
 Answerlist
