--- a/base/2016_kr_04_final/8.Rmd
+++ b/base/2016_kr_04_final/8.Rmd
@@ -1,15 +1,15 @@
 Question
 ========
-Процесс $\e_t$ является белым шумом. Нестационарным является процесс
+Процесс $\mathbb{E}_t$ является белым шумом. Нестационарным является процесс
 
 
 Answerlist
 ----------
-*  $Y_t = -1Y_{t-1} + \e_t$
-*  $Y_t = 2017\e_t$
-*  $Y_t = 0.1Y_{t-1} + \e_t$
+*  $Y_t = -1Y_{t-1} + \mathbb{E}_t$
+*  $Y_t = 2017\mathbb{E}_t$
+*  $Y_t = 0.1Y_{t-1} + \mathbb{E}_t$
 *  $Y_t = 2017$
-*  $Y_t = \e_t + 0.1\e_{t-1} + 1.5\e_{t-2}$
+*  $Y_t = \mathbb{E}_t + 0.1\mathbb{E}_{t-1} + 1.5\mathbb{E}_{t-2}$
 
 Solution
 ========
