--- a/base/2017_kr_01/6.Rmd
+++ b/base/2017_kr_01/6.Rmd
@@ -1,15 +1,15 @@
 Question
 ========
-Эмманюэль и Владимир оценили зависимость стоимости подержанных Пежо (одной серии) $Y$ от пробега $X$ (измеряемого в км) с помощью модели парной регрессии $Y = \alpha + \beta X + \e$ по по одной и той же выборке, однако Эмманюэль измерял стоимость машин в евро, а Владимир – в рублях, 1 евро = 65 рублей. Оценки МНК коэффициента наклона регрессии, полученные Эмманюэлем $\beta_E$ и Владимиром $\beta_B$ связаны следующим образом:
+Эмманюэль и Владимир оценили зависимость стоимости подержанных Пежо (одной серии) $Y$ от пробега $X$ (измеряемого в км) с помощью модели парной регрессии $Y = \alpha + \beta X + \mathbb{E}$ по по одной и той же выборке, однако Эмманюэль измерял стоимость машин в евро, а Владимир – в рублях, 1 евро = 65 рублей. Оценки МНК коэффициента наклона регрессии, полученные Эмманюэлем $\beta_E$ и Владимиром $\beta_B$ связаны следующим образом:
 
 
 Answerlist
 ----------
-*  $\hb_B = 65 \hb_E$
-*  $\hb_B = \hb_E$
-*  $\hb_E = 65 \hb_B$
-*  $\hb_E = 4225 \hb_B$
-*  $\hb_B = 4225 \hb_E$
+*  $\hat \beta_B = 65 \hat \beta_E$
+*  $\hat \beta_B = \hat \beta_E$
+*  $\hat \beta_E = 65 \hat \beta_B$
+*  $\hat \beta_E = 4225 \hat \beta_B$
+*  $\hat \beta_B = 4225 \hat \beta_E$
 
 Solution
 ========
