--- a/base/2018_19_final/question_02.Rmd
+++ b/base/2018_19_final/question_02.Rmd
@@ -1,8 +1,8 @@
 Question
 ========
 
-Инструмент $Z_t$ для состоятельной оценки динамической модели $Y_{t} =\alpha +\beta_0 X_t + \beta_1 Y_{t-1} + \varepsilon_t$,
-где $\varepsilon_t = u_t + \lambda_1 \varepsilon_{t-1} + \lambda_2 \varepsilon_{t-2}$,
+Инструмент $Z_t$ для состоятельной оценки динамической модели $Y_{t} =\alpha +\beta_0 X_t + \beta_1 Y_{t-1} + \mathrm{Var}epsilon_t$,
+где $\mathrm{Var}epsilon_t = u_t + \lambda_1 \mathrm{Var}epsilon_{t-1} + \lambda_2 \mathrm{Var}epsilon_{t-2}$,
 
 
 Answerlist
