--- a/base/2018_19_kr1/question_06.Rmd
+++ b/base/2018_19_kr1/question_06.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-Крокодил Гена оценил с помощью МНК зависимость $Y_i = \beta_0 + \beta_1 X_i + \varepsilon_i$. Оказалось, что $\hat \beta_0 = 90$, а $\hat\beta_1 = 3$.
+Крокодил Гена оценил с помощью МНК зависимость $Y_i = \beta_0 + \beta_1 X_i + \mathrm{Var}epsilon_i$. Оказалось, что $\hat \beta_0 = 90$, а $\hat\beta_1 = 3$.
 Чебурашка увеличил переменные $X$ и $Y$ на 10% и снова оценил уравнение регрессии. В результате этой корректировки
 
 Answerlist
