--- a/base/2018_19_kr1/question_10.Rmd
+++ b/base/2018_19_kr1/question_10.Rmd
@@ -1,12 +1,12 @@
 Question
 ========
-Рассмотрим модель множественной регрессии $Y=X\beta+\varepsilon$, где $\hat Y = X\hat\beta$, $e=Y-\hat Y$.
+Рассмотрим модель множественной регрессии $Y=X\beta+\mathrm{Var}epsilon$, где $\hat Y = X\hat\beta$, $e=Y-\hat Y$.
 Величина $RSS$ — это квадрат длины вектора
 
 Answerlist
 ----------
 * $e$
-* $\varepsilon$
+* $\mathrm{Var}epsilon$
 * $Y-\bar Y$
 * $\hat Y - \bar Y$
 * $\hat Y$
