--- a/base/2018_19_kr3/question_10.Rmd
+++ b/base/2018_19_kr3/question_10.Rmd
@@ -1,10 +1,10 @@
 Question
 ========
-Для модели $Y_i = \beta X_i + \varepsilon_i$ c $\E(\varepsilon_i) = 0$ известно,
+Для модели $Y_i = \beta X_i + \mathrm{Var}epsilon_i$ c $\mathbb{E}(\mathrm{Var}epsilon_i) = 0$ известно,
 что оценка $\hat \beta = \frac{\sum_{i=1}^n Y_i}{\sum_{i=1}^n X_i}$ обладает наименьшей дисперсией 
 среди линейных несмещённых оценок. 
 
-Дисперсии $\Var(\varepsilon_i)$ пропорциональны
+Дисперсии $\mathrm{Var}(\mathrm{Var}epsilon_i)$ пропорциональны
 
 Answerlist
 ----------
