--- a/base/2018_19_midterm/mi_01.Rmd
+++ b/base/2018_19_midterm/mi_01.Rmd
@@ -3,8 +3,8 @@ Question
 
 Исследовательница Надежда оценила регрессию в отклонениях, $\hat y_i =  x_i + 2 z_i$ с помощью МНК.
 Известно, что $\bar Y=5$, $\bar X =6$, $\bar Z=-2$.
-В регрессии нецентрированных переменных, $\hat Y_i = \hb_0 + \hb_1 X_i + \hb_2 Z_i$, 
-оценка коэффициента $\hb_0$ равна
+В регрессии нецентрированных переменных, $\hat Y_i = \hat \beta_0 + \hat \beta_1 X_i + \hat \beta_2 Z_i$, 
+оценка коэффициента $\hat \beta_0$ равна
 
 Answerlist
 ----------
