--- a/base/2016_kr_03/4.Rmd
+++ b/base/2016_kr_03/4.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-Метод максимального правдоподобия для оценки коэффициентов регрессии $Y = X\beta  + \mathrm{Var}epsilon$ НЕ МОЖЕТ быть применён, если
+Метод максимального правдоподобия для оценки коэффициентов регрессии $Y = X\beta  + u$ НЕ МОЖЕТ быть применён, если
 
 Answerlist
 ----------
