--- a/base/2017_kr_01/1.Rmd
+++ b/base/2017_kr_01/1.Rmd
@@ -10,7 +10,7 @@ $Y= 3$  & 0.1   &  0.3  & 0.1   \\
 $Y= 4$  & 0.15  &  0.05 & 0.05  \\
 $Y =6$  & 0.05  &  0.15 & 0.05  \\
 \bottomrule
-\mathbb{E}nd{tabular}
+\end{tabular}
 
 Математическое ожидание случайной величины $Y$ при условии, что $X=3$, равно
 
