--- a/base/2017_kr_02_midterm/2.Rmd
+++ b/base/2017_kr_02_midterm/2.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-Для регрессии $Y = \beta_0 + \beta_1 X_1 + \beta_2 X_2 + \beta_3 X_3 + \mathrm{Var}epsilon$, оцененной по 36 наблюдениям с $R^2 = 0.9$, значение тестовой статистики для проверки гипотезы об адекватности регрессии равно
+Для регрессии $Y = \beta_0 + \beta_1 X_1 + \beta_2 X_2 + \beta_3 X_3 + u$, оцененной по 36 наблюдениям с $R^2 = 0.9$, значение тестовой статистики для проверки гипотезы об адекватности регрессии равно
 
 
 Answerlist
