--- a/base/2017_kr_02_midterm/4.Rmd
+++ b/base/2017_kr_02_midterm/4.Rmd
@@ -11,7 +11,7 @@ driveway & -922.563 & 8602.312 & -0.11 & 0.915 \\
 square*driveway & 3.479 & 1.43 & 2.42 & 0.016 \\
 $const$ & 38731.07 & 8156.39 & 4.75 & 0.000 \\
 \bottomrule
-\mathbb{E}nd{tabular}
+\end{tabular}
 
 
 
