--- a/base/2017_kr_02_midterm/9.Rmd
+++ b/base/2017_kr_02_midterm/9.Rmd
@@ -1,11 +1,11 @@
 Question
 ========
 По данным для 27 фирм исследована зависимость прибыли Y от числа работников X вида\\
-$Y = \beta_0 + \beta_1 X + \mathrm{Var}epsilon$
+$Y = \beta_0 + \beta_1 X + u$
 и получено $\hat \beta_0 = 8, \hat \beta_1 = 2, \hat \sigma^2 = 25$ и матрица $(X'X)^{-1} = \begin{pmatrix}
 0.36 & -0.03 \\
 -0.03 & 0.09
-\mathbb{E}nd{pmatrix}$.\\ 95\% доверительный интервал для $\beta_1$:
+\end{pmatrix}$.\\ 95\% доверительный интервал для $\beta_1$:
 
 
 
