--- a/base/2017_kr_04_final/4.Rmd
+++ b/base/2017_kr_04_final/4.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-Из откровений внеземного разума известно, что эндогенности в модели $Y_i = \beta_0 + \beta_1 X_i + \mathrm{Var}epsilon_i$ нет. Однако Вовочка нашёл хороший инструмент $z_i$, отвечающий всем требованиям, предъявляемым к инструментам, и оценил $\beta_1$ методом инструментальных переменных. Его оценка $\beta_1$ окажется
+Из откровений внеземного разума известно, что эндогенности в модели $Y_i = \beta_0 + \beta_1 X_i + u_i$ нет. Однако Вовочка нашёл хороший инструмент $z_i$, отвечающий всем требованиям, предъявляемым к инструментам, и оценил $\beta_1$ методом инструментальных переменных. Его оценка $\beta_1$ окажется
 
 
 
