--- a/base/2017_kr_04_final/5.Rmd
+++ b/base/2017_kr_04_final/5.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-Рассмотрим процесс $Y_t = -0.2 Y_{t-1} + \mathrm{Var}epsilon_t$. 5-ое значение автокорреляционной функции равно
+Рассмотрим процесс $Y_t = -0.2 Y_{t-1} + u_t$. 5-ое значение автокорреляционной функции равно
 
 
 
