--- a/base/2018_19_final/question_01.Rmd
+++ b/base/2018_19_final/question_01.Rmd
@@ -1,7 +1,7 @@
 Question
 ========
 
-Гипотеза Алмон при оценивании модели с распределенными лагами $Y_t = \alpha + \sum_{j=0}^J\beta_j X_{t-j} + \mathrm{Var}epsilon_t$ 
+Гипотеза Алмон при оценивании модели с распределенными лагами $Y_t = \alpha + \sum_{j=0}^J\beta_j X_{t-j} + u_t$ 
 состоит в том, что коэффициент $\beta_j$ представим в виде
 
 Answerlist
