--- a/base/2018_19_kr1/question_05.Rmd
+++ b/base/2018_19_kr1/question_05.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-По 20 наблюдениям Чебурашка оценил модель $Y_i = \beta_0 + \beta_1 X_i + \mathrm{Var}epsilon_i$. 
+По 20 наблюдениям Чебурашка оценил модель $Y_i = \beta_0 + \beta_1 X_i + u_i$. 
 Известно, что $\sum X_i = -10$, $\sum X_i^2 = 40$, $\sum X_i Y_i = 10$, $\sum Y_i = 50$.
 
 Сумма оценок МНК коэффициентов $\hat \beta_0 + \hat \beta_1$ равна 
