--- a/base/2018_19_kr1/question_07.Rmd
+++ b/base/2018_19_kr1/question_07.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-В модели $Y_i = \beta_0 + \beta_1 X_i + \mathrm{Var}epsilon_i$ при выполненных предпосылках теоремы Гаусса-Маркова и нормальных ошибках тестовая статистика
+В модели $Y_i = \beta_0 + \beta_1 X_i + u_i$ при выполненных предпосылках теоремы Гаусса-Маркова и нормальных ошибках тестовая статистика
 $(\hat\beta_1 - \beta_1)/se(\hat\beta_1)$ имеет распределение
 
 Answerlist
