--- a/base/2018_19_kr3/question_04.Rmd
+++ b/base/2018_19_kr3/question_04.Rmd
@@ -1,7 +1,7 @@
 Question
 ========
 Уоррен Баффет проверяет гипотезу $H_0$: $g(\beta)=0$ для модели 
-$Y_i = \beta_0 + \beta_1 X_{i1} + \ldots + \beta_k X_{ik} + \mathrm{Var}epsilon_i$ с помощью теста множителей Лагранжа.
+$Y_i = \beta_0 + \beta_1 X_{i1} + \ldots + \beta_k X_{ik} + u_i$ с помощью теста множителей Лагранжа.
 Для теста Уоррену необходимо знать оценки параметров
 
 Answerlist
