--- a/base/2018_19_kr3/question_08.Rmd
+++ b/base/2018_19_kr3/question_08.Rmd
@@ -1,7 +1,7 @@
 Question
 ========
-В линейной модели $Y_i = \beta_0 + \beta_1 X_i + \mathrm{Var}epsilon_i$ стохастический регрессор 
-и случайный член $\mathrm{Var}epsilon_i$ коррелированы. Состоятельные оценки коэффициентов можно получить 
+В линейной модели $Y_i = \beta_0 + \beta_1 X_i + u_i$ стохастический регрессор 
+и случайный член $u_i$ коррелированы. Состоятельные оценки коэффициентов можно получить 
 с помощью
 
 Answerlist
