--- a/base/2018_19_midterm/mi_02.Rmd
+++ b/base/2018_19_midterm/mi_02.Rmd
@@ -8,7 +8,7 @@ $$
 0.04 & 0.012 & -0.008 \\
 0.012 & 0.03 & -0.007 \\
 -0.008 & -0.007 & 0.02 
-\mathbb{E}nd{pmatrix}
+\end{pmatrix}
 $$
 Предпосылки теоремы Гаусса-Маркова выполнены. Отношение дисперсии оценки $\hat \beta_0$ к дисперсии оценки $\hat \beta_2$ равно
 
