--- a/base/2018_19_midterm/mi_06.Rmd
+++ b/base/2018_19_midterm/mi_06.Rmd
@@ -6,11 +6,11 @@ Question
 
 Answerlist
 ----------
-* случайные ошибки $\mathrm{Var}epsilon_i$ нормально распределены
-* случайные ошибки $\mathrm{Var}epsilon_i$ имеют одинаковые дисперсии
-* случайные ошибки $\mathrm{Var}epsilon_i$ не коррелированы
+* случайные ошибки $u_i$ нормально распределены
+* случайные ошибки $u_i$ имеют одинаковые дисперсии
+* случайные ошибки $u_i$ не коррелированы
 * матрица регрессоров $X$ имеет полный ранг
-* модель $Y=X\beta + \mathrm{Var}epsilon$ правильно специфицирована
+* модель $Y=X\beta + u$ правильно специфицирована
 
 Solution
 ========
