--- a/base/2016_kr_03/7.Rmd
+++ b/base/2016_kr_03/7.Rmd
@@ -6,7 +6,7 @@ f(x|\lambda ) = \begin{cases}
 \lambda^{-1} x^{- 1 + 1/\lambda},
 \text{ если }0 < x < 1; \\
 0, \text{ иначе.}
-\mathbb{E}nd{cases}
+\end{cases}
 $$
 имеет вид:
 
