--- a/base/2016_kr_04_final/10.Rmd
+++ b/base/2016_kr_04_final/10.Rmd
@@ -7,7 +7,7 @@ $$
 1 & 0.1 & 0.2 \\
 0.1 & 4 & 1.5 \\
 0.2 & 1.5 & 18 \\
-\mathbb{E}nd{pmatrix}.
+\end{pmatrix}.
 $$
 
 Длина 95\%-го доверительного интервала для $\beta_2 + \beta_3$ примерно равна
