--- a/base/2018_19_kr3/question_01.Rmd
+++ b/base/2018_19_kr3/question_01.Rmd
@@ -1,6 +1,6 @@
 Question
 ========
-Рассмотрим модель $Y_i= \beta_0 + \beta_z Z_{i} + \beta_w W_{i} + \mathrm{Var}epsilon$ при гетероскедастичности.
+Рассмотрим модель $Y_i= \beta_0 + \beta_z Z_{i} + \beta_w W_{i} + u$ при гетероскедастичности.
 Стандартная ошибка МНК-оценки, рассчитываемая по формуле $se(\hat\beta_w)=\sqrt{RSS \cdot (X'X)^{-1}_{33}/(n-3)}$,
 является
 
