--- a/base/2018_19_midterm/mi_03.Rmd
+++ b/base/2018_19_midterm/mi_03.Rmd
@@ -7,12 +7,12 @@ X'X = \begin{pmatrix}
 20 & 0 & 0 \\
 0 & 4 & 3 \\
 0 & 3 & 5 
-\mathbb{E}nd{pmatrix}, \; \;
+\end{pmatrix}, \; \;
 X'Y = \begin{pmatrix}
 40 \\
 10 \\
 13
-\mathbb{E}nd{pmatrix}, \;\;
+\end{pmatrix}, \;\;
 \sum_{i=1}^n Y_i^2 = 140.
 $$
 Коэффициент $R^2$ в этой модели равен
