--- a/base/2017_kr_02_midterm/8.Rmd
+++ b/base/2017_kr_02_midterm/8.Rmd
@@ -2,7 +2,7 @@ Question
 ========
 По одним и тем же наблюдениям оценили две регрессии: $\hat y = 1 + 3X_1$ и $\hat y = 2 + 5X_2$.
 
-Известно, что $\hCov(X_1, X_2) > 0$. Оценки МНК коэффициентов регрессии $Y = \beta_0 + \beta_1 X_1 + \beta_2 X_2 + u$:
+Известно, что $\widehat{\mathrm{Cov}}(X_1, X_2) > 0$. Оценки МНК коэффициентов регрессии $Y = \beta_0 + \beta_1 X_1 + \beta_2 X_2 + u$:
 
 
 
