\R and orthogonality question

--- a/base/2017_kr_01/2.Rmd
+++ b/base/2017_kr_01/2.Rmd
@@ -1,6 +1,7 @@
 Question
 ========
-Оценка МНК коэффициента регрессии без свободного члена $Y_i = \beta X_i + u_i, i = 1, \ldots, n$, где $x_i = X_i - \overline{X}, y_i = Y_i - \overline{Y}$, находится по формуле
+Оценка МНК коэффициента регрессии без свободного члена $Y_i = \beta X_i + u_i, i = 1, \ldots, n$, 
+где $x_i = X_i - \bar X, y_i = Y_i - \bar Y$, находится по формуле
 
 
 Answerlist
